--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "reactstrap": "^9.2.3",
+    "tree": "^0.1.3",
     "typescript": "^3.9.10",
     "web-vitals": "^4.2.4",
     "webpack": "^5.96.1"
